--- a/account.html
+++ b/account.html
@@ -2,19 +2,19 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Мой VPN</title>
+  <title>Ваш доступ</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    body{font-family:system-ui;margin:0;background:#f5f5f5}
-    .card{background:#fff;margin:16px;padding:16px;border-radius:12px}
-    code{background:#eee;padding:6px;border-radius:6px;display:block}
+    body{margin:0;background:#0e0f13;color:#e8e9ed;font-family:system-ui}
+    .card{max-width:420px;margin:40px auto;background:#161822;padding:20px;border-radius:16px}
+    code{display:block;background:#0e0f13;padding:12px;border-radius:10px}
   </style>
 </head>
 <body>
 
 <div class="card">
-  <h2>Ваш VPN ключ</h2>
-  <code>vpn://key-demo-123456</code>
+  <h2>VPN ключ</h2>
+  <code>vpn://demo-key-123456</code>
   <p>Скопируйте и вставьте в приложение</p>
 </div>
 
