--- a/checkout.html
+++ b/checkout.html
@@ -5,17 +5,17 @@
   <title>Оплата</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    body{font-family:system-ui;margin:0;background:#f5f5f5}
-    .card{background:#fff;margin:16px;padding:16px;border-radius:12px}
-    .btn{display:block;padding:12px;text-align:center;background:#00aa55;color:#fff;border-radius:10px;border:0;width:100%}
+    body{margin:0;background:#0e0f13;color:#e8e9ed;font-family:system-ui}
+    .card{max-width:420px;margin:40px auto;background:#161822;padding:20px;border-radius:16px}
+    button{width:100%;padding:14px;border:0;border-radius:12px;background:#00c26f;color:#fff;font-size:16px}
   </style>
 </head>
 <body>
 
 <div class="card">
   <h2>Оплата</h2>
-  <p>Оплатите в TON (демо)</p>
-  <button class="btn" onclick="pay()">Оплатить</button>
+  <p>Оплата в TON (демо режим)</p>
+  <button onclick="pay()">Оплатить</button>
 </div>
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -24,12 +24,12 @@
     const tg=window.Telegram?.WebApp;
     if(tg){
       tg.showPopup({
-        title:"Демо оплата",
-        message:"Представим, что TON оплата прошла",
+        title:"Оплата",
+        message:"Демо: считаем, что платёж прошёл",
         buttons:[{type:"ok"}]
       });
     }
-    setTimeout(()=>location.href="account.html",1000);
+    setTimeout(()=>location.href="account.html",800);
   }
 </script>
 
