--- a/product.html
+++ b/product.html
@@ -5,9 +5,9 @@
   <title>Тариф</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    body{font-family:system-ui;margin:0;background:#f5f5f5}
-    .card{background:#fff;margin:16px;padding:16px;border-radius:12px}
-    .btn{display:block;padding:12px;text-align:center;background:#0088cc;color:#fff;border-radius:10px;text-decoration:none}
+    body{margin:0;background:#0e0f13;color:#e8e9ed;font-family:system-ui}
+    .card{max-width:420px;margin:40px auto;background:#161822;padding:20px;border-radius:16px}
+    .btn{display:block;margin-top:16px;padding:14px;text-align:center;background:#4da3ff;color:#fff;border-radius:12px;text-decoration:none}
   </style>
 </head>
 <body>
