--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Secure VPN</title>
+    <title>IVAN TEST APP VPN</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <style>
         :root{
