--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="container">
 
     <section class="hero">
-        <h1>Secure VPN</h1>
+        <h1>IVAN TEST APP VPN</h1>
         <p>
             Быстрый и приватный VPN без логов.
             Работает в любой стране. Оплата в криптовалюте.
